# UvCornyBeta

./: .gitattributes  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: .env  Dockerfile  devcontainer.json
.github/propmts/: Implement-features.promt.md  how-to-run-pytest-hook.promt.md
.github/scripts/setup/: configure-files.sh  configure-git.sh  configure-pre-commit.sh  configure-project.sh  init.sh  install-bash.sh  install-yq.sh  uninstall-yq.sh
.github/workflows/: add-test.yml  beta.yml  candidate.yml  cycle.yml  development.yml  hotfix.yml  implement-features.yml  init-branches.yml  prepare-pypi-release.yml  pypi-release.yml  release-stable-branch.yml  testpypi-release.yml
.python/scripts/: write_documentation.py
.sh/scripts/: append_requirements.sh
src/uvcornybeta/: __init__.py  _loader.py
src/uvcornybeta/entrypoint/: main.py
src/uvcornybeta/wiz-bang/: wiz-bang.py
tests/: conftest.py
tests/entrypoint/: test_main.py
tests/wiz-bang/: test_wiz.py
