[project]
name = "uvcornybeta"
version = "1.2.0a1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "IAmSorryDave", email = "212933284+IAmSorryDave@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = []
license = "MIT"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
